--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 		<org.springframework.boot.version>1.5.9.RELEASE</org.springframework.boot.version>
 		<org.springframework.cloud.version>1.4.1.RELEASE</org.springframework.cloud.version>
 		<mysql.version>5.1.30</mysql.version>
+		<beetl.version>2.7.15</beetl.version>
 	</properties>
 
 	<parent>
@@ -82,6 +83,25 @@
 			<artifactId>mybatis-plus-generate</artifactId>
 			<version>2.1.8</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<!-- beetl -->
+		<dependency>
+			<groupId>com.ibeetl</groupId>
+			<artifactId>beetl</artifactId>
+			<version>${beetl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>cn.yerl.web</groupId>
+			<artifactId>spring-boot-starter-beetl</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
 
 	</dependencies>
 
