--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 		<org.springframework.boot.version>1.5.9.RELEASE</org.springframework.boot.version>
 		<org.springframework.cloud.version>1.4.1.RELEASE</org.springframework.cloud.version>
 		<mysql.version>5.1.30</mysql.version>
+		<beetl.version>2.7.15</beetl.version>
 	</properties>
 
 	<parent>
@@ -83,6 +84,19 @@
 			<version>2.1.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<!-- beetl -->
+		<dependency>
+			<groupId>com.ibeetl</groupId>
+			<artifactId>beetl</artifactId>
+			<version>${beetl.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -92,6 +106,20 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/webapp</directory>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
